Validación fecha - Validator

--- a/Software/divisionsalud/nbproject/private/private.properties
+++ b/Software/divisionsalud/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\David\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31505842329.properties
+deploy.ant.properties.file=C:\\Users\\Daniela\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-2058818480.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/glassfish/glassfish4/glassfish/domains/domain1
-j2ee.server.home=C:/glassfish/glassfish4/glassfish
-j2ee.server.instance=[C:\\glassfish\\glassfish4\\glassfish;C:\\glassfish\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/glassfish/glassfish4
+j2ee.server.domain=E:/Glassfish1/glassfish/domains/domain1
+j2ee.server.home=E:/Glassfish1/glassfish
+j2ee.server.instance=[E:\\Glassfish1\\glassfish;E:\\Glassfish1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=E:/Glassfish1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\David\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Daniela\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
